Wed Oct 17 14:52:37 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/opensplice/compiler/Downcall_Event.cpp:
        * cuts/iccm/arch/opensplice/compiler/Upcall_Event.cpp:

          Added support for IDL enums and structs

        * tests/iccm/compiler/opensplice:
        * tests/iccm/compiler/opensplice/Smoke_Test.idl:
        * tests/iccm/compiler/opensplice/Smoke_Test.mpc:
        * tests/iccm/compiler/opensplice/Smoke_Test_Components.idl:
        * tests/iccm/compiler/opensplice/Smoke_Test_dds2ccm.idl:
        * tests/iccm/compiler/opensplice/driver.cpp:

          Created smoke test for opensplice iccm compiler

        * tests/iccm/compiler/tao/Smoke_Test.mpc:
        * tests/iccm/compiler/tcpip/Smoke_Test.mpc:

          Fixed base projects to reduce recompilation

Mon Oct 15 23:25:53 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:

          Fixed compilation errors on Linux.

Mon Oct 15 23:11:27 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:

          BUGFIX: The fix below actually broke runtime execution on Windows.
          Instead of using a raw string, we now use the DAnCE::CCM_COMPONENTS
          property to determine the handler's instance type. By using the
          DAnCE property, it shields of from changes to the properties name
          in the future.

Mon Oct 15 22:49:18 UTC 2012  James H Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:

          BUGFIX: DAnCE v1.0.5 corrected the property name for component
          instance handlers. Added preprocessor statements to reflect this
          update/change.

Mon Oct 15 19:48:47 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/opensplice/Traits.cpp:
